--- a/app/views/goats/index.html.erb
+++ b/app/views/goats/index.html.erb
@@ -1,4 +1,6 @@
-<h1> Les chèvres </h1>
+<h1> Bienvenue sur Air Goats </h1>
+
+<br> <%= link_to "Mon compte", dashboard_path %>
 
 <ul>
   <% @goats.each do |goat| %>
