--- a/app/views/goats/new.html.erb
+++ b/app/views/goats/new.html.erb
@@ -6,6 +6,7 @@
   <%= f.input :appetite %>
   <%= f.input :bonus %>
   <%= f.input :description %>
+  <%= f.input :picture, as: :file %>
   <%= f.submit %>
 <% end %>
 
