--- a/app/views/goats/show.html.erb
+++ b/app/views/goats/show.html.erb
@@ -1,9 +1,16 @@
 <h1> Profil </h1>
 <%= "Nom : #{@goat.name.capitalize}" %>
+
+<br> <% if @goat.picture.attached? %>
+  <%= cl_image_tag @goat.picture.key, height: 300, width: 400, crop: :fill %>
+<% end %>
+
 <br> <%= "Age : #{@goat.age} ans" %>
 <br> <%= "Race : #{@goat.race.capitalize}" %>
 <br> <%= "Appétit : #{@goat.appetite.capitalize}" %>
 <br> <%= "Atout charme : #{@goat.bonus.capitalize}" %>
 <br> <%= "Description : #{@goat.description.capitalize}" %>
 <br> <%= "Prix : #{@goat.price}€ / jour" %>
+
+<br> <%= link_to "Réservez-moi", new_goat_reservation_path(@goat) %>
 <br> <%= link_to "Retour", goats_path %>
