--- a/app/views/goats/index.html.erb
+++ b/app/views/goats/index.html.erb
@@ -1,13 +1,12 @@
 <h1> Bienvenue sur Air Goats </h1>
 
 <br> <%= link_to "Mon compte", dashboard_path %>
-
+<br>
 <ul>
   <% @goats.each do |goat| %>
-    <li> <%= link_to goat.name, goat_path(goat) %> </li>
+    <li> <%= link_to goat.name.capitalize, goat_path(goat) %> </li>
   <% end %>
 </ul>
 
-<br> <%= link_to "Ajouter une chèvre", new_goat_path %>
 
 
