--- a/app/views/goats/show.html.erb
+++ b/app/views/goats/show.html.erb
@@ -1,10 +1,8 @@
-<h1> Profil </h1>
-<%= "Nom : #{@goat.name.capitalize}" %>
+<h1> <%= @goat.name.capitalize %> </h1>
 
 <br> <% if @goat.picture.attached? %>
   <%= cl_image_tag @goat.picture.key, height: 300, width: 400, crop: :fill %>
 <% end %>
-<%= console %>
 
 <br> <%= "Age : #{@goat.age} ans" %>
 <br> <%= "Race : #{@goat.race.capitalize}" %>
