--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,8 +1,11 @@
 <h1> Vos réservations </h1>
 
 <% @reservations.each do |resa| %>
-  <br> <%= "Vous avez réservé #{resa.goat.name} du #{resa.start_date} au #{resa.end_date}" %>
+  <br> <%= "Vous avez réservé #{resa.goat.name.capitalize} du #{resa.start_date} au #{resa.end_date}" %>
 <% end %>
 
-<br> <%= link_to "Se déconnecter", destroy_user_session_path, method: :delete, data: {confirm: "Are you sure?"}  %>
+<br> <%= link_to "Ajouter une chèvre", new_goat_path %>
+
+
 <br> <%= link_to "Retour", goats_path %>
+<!--<br> <%= link_to "Se déconnecter", destroy_user_session_path, method: :delete, data: {confirm: "Are you sure?"}  %> -->
