--- a/app/views/goats/index.html.erb
+++ b/app/views/goats/index.html.erb
@@ -1,12 +1,21 @@
-<h1> Bienvenue sur Air Goats </h1>
 
-<br> <%= link_to "Mon compte", dashboard_path %>
-<br>
-<ul>
-  <% @goats.each do |goat| %>
-    <li> <%= link_to goat.name.capitalize, goat_path(goat) %> </li>
-  <% end %>
-</ul>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1574417792951-72a78328d492?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80);">
+  <div class="container px-4">
+    <h1>Bienvenue sur <strong>Air Goats</strong>!</h1>
+    <p>🐑 Plus mignonnes qu'une tondeuse, plus écologiques et très efficaces ! 🐑</p>
+
+  </div>
+</div>
+
+<div class="container">
+  <div class="cards px-4">
+    <% @goats.each do |goat| %>
+      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://previews.123rf.com/images/makspogonii/makspogonii1106/makspogonii110600004/9767268-ch%C3%A8vre-dr%C3%B4le-met-dans-sa-langue.jpg)">
+        <%= link_to goat.name.capitalize, goat_path(goat), class: "cards-link" %>
+      </div>
+    <% end %>
+  </div>
+</div>
 
 
 
