--- a/app/views/goats/index.html.erb
+++ b/app/views/goats/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1574417792951-72a78328d492?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80);">
-  <div class="container px-4">
+  <div class="container">
     <h1>Bienvenue sur <strong>Air Goats</strong>!</h1>
     <p>🐑 Plus mignonnes qu'une tondeuse, plus écologiques et très efficaces ! 🐑</p>
 
