--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,9 +11,9 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
 
-      <% if user_signed_in? %>
+     <!--  <% if user_signed_in? %> -->
         <li class="nav-item active">
-          <%= link_to "Home", "#", class: "nav-link" %>
+          <%= link_to "Home", "root_path", class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "Add new goat", new_goat_path, class: "nav-link" %>
@@ -28,7 +28,7 @@
             <%= link_to "Dashboard", dashboard_path, class: "dropdown-item" %>
           </div>
         </li>
-      <% end %>
-    </ul>
+<!--       <% end %>
+ -->    </ul>
   </div>
 </div>
