--- a/app/views/goats/new.html.erb
+++ b/app/views/goats/new.html.erb
@@ -1,11 +1,11 @@
-<h1> Ajouter une chèvre </h1>
+<h1> Proposer une chèvre à la location </h1>
 
 
 <%= simple_form_for @goat do |f| %>
   <%= f.input :name, label:"Le petit nom de votre chèvre :" %>
   <%= f.input :age, label:"Son âge :" %>
-  <%= f.input :race, label: "Sa race :" %>
-  <%= f.input :appetite, label:"Son degré d'appétit : " %>
+  <%= f.input :race, label: "Sa race :", collection: Goat::RACE %>
+  <%= f.input :appetite, label:"Son degré d'appétit : ", collection: Goat::APPETITE %>
   <%= f.input :bonus, label:"Son atout charme :" %>
   <%= f.input :description, label: "Dites nous en plus sur votre biquette d'amour !" %>
   <%= f.input :price, label: "Prix par jour à la location :" %>
