--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <%= link_to "#", class: "navbar-brand" do %>
+  <%= link_to goats_path, class: "navbar-brand" do %>
     <%= image_tag "logo-air-goats.png" %>
   <% end %>
 
@@ -11,24 +11,43 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
 
-     <!--  <% if user_signed_in? %> -->
-        <li class="nav-item active">
-          <%= link_to "Home", "root_path", class: "nav-link" %>
+      <% if user_signed_in? %>
+        <li class="nav-item">
+          <%= link_to "Tableau de bord", dashboard_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Add new goat", new_goat_path, class: "nav-link" %>
+          <%= link_to "Louez vos chèvres", new_goat_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Mon compte", dashboard_path, class: "nav-link" %>
+          <%= link_to "Se déconnecter", destroy_user_session_path, method: :delete, data: {confirm: "Êtes-vous sûr de vouloir vous déconnecter?"}  %>
         </li>
         <li class="nav-item dropdown">
-          <%= image_tag "logo-air-goats.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <% console %>
+          <% if current_user.picture.attached? %>
+
+            <%= cl_image_tag current_user.picture.key, class: "avatar-large", alt: "avatar-large" %>
+          <% else %>
+            <%= image_tag "https://kitt.lewagon.com/placeholder/users/arthur-littm", class: "avatar-large", alt: "avatar-large" %>
+          <% end %>
+        </li>
+      <% else %>
+        <li class="nav-item">
+          <%= link_to "Créer un compte", new_user_registration_path  %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Se connecter", new_user_session_path %>
+        </li>
+
+
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <%= link_to "Add new goat", new_goat_path, class: "dropdown-item" %>
             <%= link_to "Dashboard", dashboard_path, class: "dropdown-item" %>
           </div>
         </li>
-<!--       <% end %>
- -->    </ul>
+<% end %>
+   </ul>
   </div>
 </div>
+
+
+
