--- a/app/views/goats/index.html.erb
+++ b/app/views/goats/index.html.erb
@@ -1,10 +1,55 @@
-
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1574417792951-72a78328d492?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80);">
-  <div class="container">
-    <h1>Bienvenue sur <strong>Air Goats</strong>!</h1>
-    <p>🐑 Plus mignonnes qu'une tondeuse, plus écologiques et très efficaces ! 🐑</p>
-
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <!-- <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol> -->
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="https://res.cloudinary.com/drnblm552/image/upload/v1606388773/carlos-ruiz-huaman-rDi0jWNf5O0-unsplash_cpn15w.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h3>Je suis Blandine</h3>
+          <p>Mon petit surnom c'est le lucky luke de la tonte...</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="https://res.cloudinary.com/drnblm552/image/upload/v1606388774/nandhu-kumar-jAMcUbsTvWE-unsplash_lz6oot.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h3>Je suis Gisèle</h3>
+          <p>J'adore particulièrement le gazon bien vert !</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="https://res.cloudinary.com/drnblm552/image/upload/v1606388747/anton-darius-nVbq8EUa4BA-unsplash_q0zylq.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h3>Je suis Gwendoline</h3>
+          <p>Interdiction de me déranger quand je broute...</p>
+        </div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
+
+
+<div class="pv d-flex justify-content-center align-items-center flex-column">
+  <h3 class="pv">🐑 Plus mignonnes qu'une tondeuse, plus écologiques et très efficaces ! 🐑</h3>
+  <%= simple_form_for :search, url: root_path, method: :get do |f| %>
+    <div class="search-form-control form-group">
+      <input class="form-control string required" type="text" name="search[query]" id="search_query" />
+      <button name="button" type="submit" class="btn btn-mygreen">
+        <i class="fas fa-search"></i> Rechercher
+      </button>
+    </div>
+  <% end %>
+
+
 </div>
 
 <div class="container">
