--- a/app/views/goats/index.html.erb
+++ b/app/views/goats/index.html.erb
@@ -40,25 +40,23 @@
 
 <div class="pv d-flex justify-content-center align-items-center flex-column">
   <h3 class="pv">🐑 Plus mignonnes qu'une tondeuse, plus écologiques et très efficaces ! 🐑</h3>
-  <%= simple_form_for :search, url: root_path, method: :get do |f| %>
-    <div class="search-form-control form-group">
-      <input class="form-control string required" type="text" name="search[query]" id="search_query" />
-      <button name="button" type="submit" class="btn btn-mygreen">
-        <i class="fas fa-search"></i> Rechercher
-      </button>
-    </div>
-  <% end %>
 
+  <div class="search_bar_div">
+    <%= form_tag goats_path, method: :get do %>
+      <div class="search-form-control form-group">
+
+        <%= text_field_tag :query,
+          params[:query],
+          class: "form-control string required",
+          placeholder: "Retrouvez votre chèvre préférée"
+        %>
+        <%= submit_tag "Rechercher", class: "btn btn-mygreen" do %>
+            <i class="fas fa-search"></i> Rechercher
+        <% end %>
+      </div>
+    <% end %>
+  </div>
 </div>
-
-<%= form_tag goats_path, method: :get do %>
-  <%= text_field_tag :query,
-    params[:query],
-    class: "form-control",
-    placeholder: "Retrouvez votre chèvre préférée"
-  %>
-  <%= submit_tag "Search", class: "btn btn-primary" %>
-<% end %>
 
 <div class="container">
   <div class="cards px-4">
