footer to bottom fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,15 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+body {
+  margin-bottom: 0px !important;
+}
+
+
+// .coOntent-container {
+// margin-bottom: 200px;
+// }
+// .foooter {
+//   margin-top: 500px;
+// }
