--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,19 +1,21 @@
 .footer {
-  background: #E0E0E0;
+  background: #7DD181;
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 100px;
   padding: 0px 50px;
-  color: rgba(0,0,0,0.3);
+  color: rgba(255,255,255,0.8);
 }
+
+
 .footer-links {
   display: flex;
   align-items: center;
 }
 .footer-links a {
-  color: black;
-  opacity: 0.15;
+  color: #fff;
+  opacity: 0.70;
   text-decoration: none;
   font-size: 24px;
   padding: 0px 10px;
