--- a/app/views/goats/index.html.erb
+++ b/app/views/goats/index.html.erb
@@ -1,3 +1,4 @@
+<div>
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <!-- <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -38,36 +39,36 @@
   </div>
 
 
-<div class="pv d-flex justify-content-center align-items-center flex-column">
-  <h3 class="pv">🐑 Plus mignonnes qu'une tondeuse, plus écologiques et très efficaces ! 🐑</h3>
+  <div class="pv d-flex justify-content-center align-items-center flex-column">
+    <h3 class="pv">🐑 Plus mignonnes qu'une tondeuse, plus écologiques et très efficaces ! 🐑</h3>
 
-  <div class="search_bar_div">
-    <%= form_tag goats_path, method: :get do %>
-      <div class="search-form-control form-group">
+    <div class="search_bar_div">
+      <%= form_tag goats_path, method: :get do %>
+        <div class="search-form-control form-group">
 
-        <%= text_field_tag :query,
-          params[:query],
-          class: "form-control string required",
-          placeholder: "Retrouvez votre chèvre préférée"
-        %>
-        <%= submit_tag "Rechercher", class: "btn btn-mygreen" do %>
-            <i class="fas fa-search"></i> Rechercher
-        <% end %>
-      </div>
-    <% end %>
+          <%= text_field_tag :query,
+            params[:query],
+            class: "form-control string required",
+            placeholder: "Retrouvez votre chèvre préférée"
+          %>
+          <%= submit_tag "Rechercher", class: "btn btn-mygreen" do %>
+              <i class="fas fa-search"></i> Rechercher
+          <% end %>
+        </div>
+      <% end %>
+    </div>
   </div>
-</div>
 
-<div class="container">
-  <div class="cards px-4">
-    <% @goats.each do |goat| %>
-      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://previews.123rf.com/images/makspogonii/makspogonii1106/makspogonii110600004/9767268-ch%C3%A8vre-dr%C3%B4le-met-dans-sa-langue.jpg)">
-        <%= link_to goat.name.capitalize, goat_path(goat), class: "cards-link" %>
-      </div>
-    <% end %>
+  <div class="container">
+    <div class="cards px-4">
+      <% @goats.each do |goat| %>
+        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://previews.123rf.com/images/makspogonii/makspogonii1106/makspogonii110600004/9767268-ch%C3%A8vre-dr%C3%B4le-met-dans-sa-langue.jpg)">
+          <%= link_to goat.name.capitalize, goat_path(goat), class: "cards-link" %>
+        </div>
+      <% end %>
+    </div>
   </div>
+
 </div>
-
-
 
 
