--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,10 +19,9 @@
           <%= link_to "Louez vos chèvres", new_goat_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Se déconnecter", destroy_user_session_path, method: :delete, data: {confirm: "Êtes-vous sûr de vouloir vous déconnecter?"}  %>
+          <%= link_to "Se déconnecter", destroy_user_session_path, class: "nav-link", method: :delete, data: {confirm: "Êtes-vous sûr de vouloir vous déconnecter?"}  %>
         </li>
         <li class="nav-item dropdown">
-          <% console %>
           <% if current_user.picture.attached? %>
 
             <%= cl_image_tag current_user.picture.key, class: "avatar-large", alt: "avatar-large" %>
