--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -8,28 +8,27 @@
   color: #F4F4F4;
   font-size: 24px;
   font-weight: bold;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  // text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   text-decoration: none;
 
 }
 
-
 .cards {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 16px;
+  grid-gap: 30px;
 }
 
 .cards-link {
   text-decoration: none;
-  color: E0E0E0;
+  color: #7DD181;
 }
 
 .cards-link:hover {
   text-decoration: none;
-  color: 007F5F;
+  color: #F4F4F6;
 }
 
 
