--- a/app/views/goats/show.html.erb
+++ b/app/views/goats/show.html.erb
@@ -1,4 +1,4 @@
-
+<div class="container body-container">
 <!--
 <br> <% if @goat.picture.attached? %>
 
@@ -37,4 +37,4 @@
 
 
  <br> <%= link_to "Retour", goats_path %>
-
+</div>
