--- a/app/views/goats/index.html.erb
+++ b/app/views/goats/index.html.erb
@@ -1,67 +1,70 @@
 <div>
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <!-- <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol> -->
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="https://res.cloudinary.com/drnblm552/image/upload/v1606388773/carlos-ruiz-huaman-rDi0jWNf5O0-unsplash_cpn15w.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h3>Je suis Blandine</h3>
-          <p>Mon petit surnom c'est le lucky luke de la tonte...</p>
+  <div class="banner">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <!-- <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol> -->
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="https://res.cloudinary.com/drnblm552/image/upload/v1606388773/carlos-ruiz-huaman-rDi0jWNf5O0-unsplash_cpn15w.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h3>Je suis Blandine</h3>
+            <p>Mon petit surnom c'est le lucky luke de la tonte...</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="https://res.cloudinary.com/drnblm552/image/upload/v1606388774/nandhu-kumar-jAMcUbsTvWE-unsplash_lz6oot.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h3>Je suis Gisèle</h3>
+            <p>J'adore particulièrement le gazon bien vert !</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="https://res.cloudinary.com/drnblm552/image/upload/v1606388747/anton-darius-nVbq8EUa4BA-unsplash_q0zylq.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h3>Je suis Gwendoline</h3>
+            <p>Interdiction de me déranger quand je broute...</p>
+          </div>
         </div>
       </div>
-      <div class="carousel-item">
-        <img src="https://res.cloudinary.com/drnblm552/image/upload/v1606388774/nandhu-kumar-jAMcUbsTvWE-unsplash_lz6oot.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h3>Je suis Gisèle</h3>
-          <p>J'adore particulièrement le gazon bien vert !</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="https://res.cloudinary.com/drnblm552/image/upload/v1606388747/anton-darius-nVbq8EUa4BA-unsplash_q0zylq.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h3>Je suis Gwendoline</h3>
-          <p>Interdiction de me déranger quand je broute...</p>
-        </div>
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-
-
-  <div class="pv d-flex justify-content-center align-items-center flex-column">
-    <h3 class="pv">🐑 Plus mignonnes qu'une tondeuse, plus écologiques et très efficaces ! 🐑</h3>
-
-    <div class="search_bar_div">
-      <%= form_tag goats_path(anchor:"goats-list"), method: :get do %>
-        <div class="search-form-control form-group">
-
-          <%= text_field_tag :query,
-            params[:query],
-            class: "form-control string required",
-            placeholder: "Retrouvez votre chèvre préférée"
-          %>
-          <%= select_tag "race", options_for_select(Goat::RACE), include_blank: true %>
-          <%= select_tag "appetite", options_for_select(Goat::APPETITE), include_blank: true %>
-          <%= submit_tag "Rechercher", class: "btn btn-mygreen" do %>
-              <i class="fas fa-search"></i> Rechercher
-          <% end %>
-        </div>
-      <% end %>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
   </div>
 
-  <div class="container">
+  <div class="search-container">
+    <div class="pv d-flex justify-content-center align-items-center flex-column">
+      <h3 class="pv">🐑 Plus mignonnes qu'une tondeuse, plus écologiques et très efficaces ! 🐑</h3>
+
+      <div class="search_bar_div">
+        <%= form_tag goats_path(anchor:"goats-list"), method: :get do %>
+          <div class="search-form-control form-group">
+
+            <%= text_field_tag :query,
+              params[:query],
+              class: "form-control string required",
+              placeholder: "Retrouvez votre chèvre préférée"
+            %>
+            <%= select_tag "race", options_for_select(Goat::RACE), include_blank: true %>
+            <%= select_tag "appetite", options_for_select(Goat::APPETITE), include_blank: true %>
+            <%= submit_tag "Rechercher", class: "btn btn-mygreen" do %>
+                <i class="fas fa-search"></i> Rechercher
+            <% end %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+
+  <div class="container body-container">
     <div class="cards px-4" id="goats-list">
       <% @goats.each do |goat| %>
         <div class="card-category" style="background-image: url('<%= cl_image_path goat.picture.key if goat.picture.attached? %>')" >
