--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,6 +10,9 @@
     <%= f.input :last_name,
                 required: true,
                 input_html: { autocomplete: "Last-name" } %>
+    <%= f.input :address,
+                required: true,
+                input_html: { autocomplete: "Address" } %>
     <%= f.input :picture, as: :file %>
     <%= f.input :email,
                 required: true,
