--- a/app/views/goats/show.html.erb
+++ b/app/views/goats/show.html.erb
@@ -20,6 +20,10 @@
    <%= "Description : #{@goat.description.capitalize}" %>
 </div>
 
+<div id="map"
+     style="width: 100%; height: 600px;"
+     data-marker="<%= @marker.to_json %>"
+     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
 
 <div class="btn-green btn-center">
   <%=link_to "Réservez-moi", new_goat_reservation_path(@goat) %>
