page new goat img shadow et box

--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -19,4 +19,22 @@
   margin: 0 auto;
 }
 
+.btn-mywhite {
+  background: #fff;
+  color: #7DD181;
+  text-decoration: none;
+  text-align: center;
+  border-radius: 20px;
+  padding: 8px 24px;
+}
 
+.btn-mywhite:hover {
+  background: #fff;
+  color: #7DD181;
+  opacity: 90%;
+  text-decoration: none;
+}
+
+.btn-mywhite{
+  margin: 0 auto;
+}
