--- a/app/views/goats/new.html.erb
+++ b/app/views/goats/new.html.erb
@@ -1,15 +1,22 @@
 <div class="container body-container">
     <h1> Proposer une chèvre à la location </h1>
-    <%= simple_form_for @goat do |f| %>
-      <%= f.input :name, label:"Le petit nom de votre chèvre :" %>
-      <%= f.input :age, label:"Son âge :" %>
-      <%= f.input :race, label: "Sa race :", collection: Goat::RACE %>
-      <%= f.input :appetite, label:"Son degré d'appétit : ", collection: Goat::APPETITE %>
-      <%= f.input :bonus, label:"Son atout charme :" %>
-      <%= f.input :description, label: "Dites nous en plus sur votre biquette d'amour !" %>
-      <%= f.input :price, label: "Prix par jour à la location :" %>
-      <%= f.input :picture, as: :file, label:"Photo la plus mignonne possible :" %>
-      <%= f.button :submit, "Proposer votre chèvre à la location", class: "btn btn-ghost" %>
-    <% end %>
+    <div class="card-form d-flex align-items-center">
+      <div class="img-part">
+        <img src="https://res.cloudinary.com/drnblm552/image/upload/v1606388775/edgar-chaparro-BkvRxV4tXEY-unsplash_erkxqh.jpg">
+      </div>
+      <div class="form-part d-flex justify-content-center ">
+        <%= simple_form_for @goat do |f| %>
+          <%= f.input :name, label:"Le petit nom de votre chèvre :" %>
+          <%= f.input :age, label:"Son âge :" %>
+          <%= f.input :race, label: "Sa race :", collection: Goat::RACE %>
+          <%= f.input :appetite, label:"Son degré d'appétit : ", collection: Goat::APPETITE %>
+          <%= f.input :bonus, label:"Son atout charme :" %>
+          <%= f.input :description, label: "Dites nous en plus sur votre biquette d'amour !" %>
+          <%= f.input :price, label: "Prix par jour à la location :" %>
+          <%= f.input :picture, as: :file, label:"Photo la plus mignonne possible :" %>
+          <%= f.button :submit, "Proposer votre chèvre à la location", class: "btn btn-mywhite" %>
+        <% end %>
+      </div>
+    </div>
 </div>
 
