small fixes front

--- a/app/views/goats/index.html.erb
+++ b/app/views/goats/index.html.erb
@@ -42,7 +42,7 @@
 
   <div class="search-container">
     <div class="pv d-flex justify-content-center align-items-center flex-column">
-      <h3 class="pv">🐑 Plus mignonnes qu'une tondeuse, plus écologiques et très efficaces ! 🐑</h3>
+      <h3 class="pv">🐐 Plus mignonnes qu'une tondeuse, plus écologiques et très efficaces ! 🐐</h3>
 
       <div class="search_bar_div">
         <%= form_tag goats_path(anchor:"goats-list"), method: :get do %>
