ajout image fond shadow btn

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -27,3 +27,38 @@
   padding-left: 100px;
   color: white;
 }
+
+
+
+.img-center-resa {
+   margin-left: auto;
+   margin-right: auto;
+}
+
+.card-form-resa {
+  margin-left: 150px;
+  margin-right: 150px;
+  width: auto;
+  height: 300px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  background-color: #7DD181;
+  border-radius: 20px;
+  margin-top: 40px;
+}
+
+.card-form-resa img{
+  height: 300px;
+  border-radius: 20px 0px 0px 20px;
+}
+
+
+.img-part-resa {
+  margin: 0px;
+  padding: 0px;
+}
+
+.form-part-resa {
+  padding-left: 10%;
+  color: white;
+}
+
