--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container body-container">
-  <h1> Réservez <%= @goat.name %> </h1>
+  <h1> Réservez <%= @goat.name.capitalize %> </h1>
   <div class="card-form-resa d-flex align-items-center">
     <div class="img-part-resa">
       <% if @goat.picture.attached? %>
