--- a/app/assets/stylesheets/components/_cards1.scss
+++ b/app/assets/stylesheets/components/_cards1.scss
@@ -1,10 +1,10 @@
 .card {
   border-radius: 5%;
   background-color: #E0E0E0;
-  // display: flex;
+  display: flex;
   align-items: center;
   margin: 20px auto;
-  width: 700px;
+  width: auto;
   padding-top: 10px;
   padding-bottom: 10px;
 }
