--- a/app/assets/stylesheets/components/carousel-inner.scss
+++ b/app/assets/stylesheets/components/carousel-inner.scss
@@ -2,6 +2,11 @@
   height: 80vh !important;
 }
 
+// .carousel-item img {
+//   height: auto !important;
+//   width: 100% !important;
+// }
+
 .pv {
   background-color: #7DD181;
   padding: 20px;
